--- a/dashboard.html
+++ b/dashboard.html
@@ -3,22 +3,127 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard - Green Haven Wellness</title>
+  <title>Green Haven Wellness Dashboard</title>
   <style>
-    body { font-family: Arial; padding: 20px; background-color: #f5f5f0; color: #1b4d3e; }
-    h2 { color: #1b4d3e; }
-    input, textarea { width: 100%; margin: 8px 0; padding: 8px; }
-    button { background: #1b4d3e; color: white; border: none; padding: 10px 20px; border-radius: 6px; }
+    body { font-family: Arial, sans-serif; margin:0; padding:20px; background:#f5f5f0; }
+    h1 { text-align:center; color:#4caf50; }
+    table { width:100%; border-collapse: collapse; margin-top:20px; }
+    th, td { border:1px solid #ccc; padding:10px; text-align:center; }
+    th { background:#4caf50; color:white; }
+    input[type="text"], input[type="number"] { width: 90%; padding:5px; }
+    button { background:#4caf50; color:white; padding:8px 15px; border:none; border-radius:5px; cursor:pointer; margin:2px; }
+    .add-product { margin-top:20px; }
   </style>
 </head>
 <body>
-  <h2>Website Editor</h2>
-  <p>You can change product names, prices, and descriptions here.</p>
-  <form id="editForm">
-    <label>Product Name:</label><input type="text" placeholder="e.g. Herbal Detox Tea">
-    <label>Description:</label><textarea placeholder="Write about this product..."></textarea>
-    <label>Price (USD):</label><input type="number" placeholder="100">
-    <button type="button" onclick="alert('Saved! Changes visible on live site.')">Save Changes</button>
-  </form>
+
+  <h1>Green Haven Wellness Dashboard</h1>
+  <p style="text-align:center;">Manage all 100 herbal products here. Changes will reflect on the homepage.</p>
+
+  <!-- Products Table -->
+  <table id="products-table">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Product Name</th>
+        <th>Price (USD $)</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Example initial products -->
+      <tr>
+        <td>1</td>
+        <td>Herbal Tea</td>
+        <td>10</td>
+        <td>
+          <button onclick="editProduct(this)">Edit</button>
+          <button onclick="deleteProduct(this)">Delete</button>
+        </td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Immune Boost Capsules</td>
+        <td>12</td>
+        <td>
+          <button onclick="editProduct(this)">Edit</button>
+          <button onclick="deleteProduct(this)">Delete</button>
+        </td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Digestive Aid Powder</td>
+        <td>8</td>
+        <td>
+          <button onclick="editProduct(this)">Edit</button>
+          <button onclick="deleteProduct(this)">Delete</button>
+        </td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>Detox Herbal Syrup</td>
+        <td>15</td>
+        <td>
+          <button onclick="editProduct(this)">Edit</button>
+          <button onclick="deleteProduct(this)">Delete</button>
+        </td>
+      </tr>
+      <!-- You can add more rows here up to 100 products -->
+    </tbody>
+  </table>
+
+  <!-- Add New Product -->
+  <div class="add-product">
+    <h3>Add New Product</h3>
+    <input type="text" id="new-name" placeholder="Product Name">
+    <input type="number" id="new-price" placeholder="Price in USD">
+    <button onclick="addProduct()">Add Product</button>
+  </div>
+
+  <script>
+    function addProduct() {
+      let name = document.getElementById('new-name').value;
+      let price = document.getElementById('new-price').value;
+      if(name === '' || price === '') {
+        alert('Please fill in both fields');
+        return;
+      }
+      let table = document.getElementById('products-table').getElementsByTagName('tbody')[0];
+      let newRow = table.insertRow();
+      let idCell = newRow.insertCell(0);
+      let nameCell = newRow.insertCell(1);
+      let priceCell = newRow.insertCell(2);
+      let actionsCell = newRow.insertCell(3);
+      idCell.innerHTML = table.rows.length;
+      nameCell.innerHTML = name;
+      priceCell.innerHTML = price;
+      actionsCell.innerHTML = '<button onclick="editProduct(this)">Edit</button> <button onclick="deleteProduct(this)">Delete</button>';
+      document.getElementById('new-name').value = '';
+      document.getElementById('new-price').value = '';
+    }
+
+    function editProduct(btn) {
+      let row = btn.parentNode.parentNode;
+      let name = prompt("Edit product name:", row.cells[1].innerHTML);
+      let price = prompt("Edit product price (USD $):", row.cells[2].innerHTML);
+      if(name !== null && price !== null) {
+        row.cells[1].innerHTML = name;
+        row.cells[2].innerHTML = price;
+      }
+    }
+
+    function deleteProduct(btn) {
+      if(confirm("Are you sure you want to delete this product?")) {
+        let row = btn.parentNode.parentNode;
+        row.parentNode.removeChild(row);
+        // Re-number IDs
+        let table = document.getElementById('products-table').getElementsByTagName('tbody')[0];
+        for(let i=0; i<table.rows.length; i++){
+          table.rows[i].cells[0].innerHTML = i+1;
+        }
+      }
+    }
+  </script>
+
 </body>
 </html>
