--- a/admin.html
+++ b/admin.html
@@ -3,29 +3,71 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Login - Green Haven Wellness</title>
+  <title>Green Haven Wellness Admin</title>
   <style>
-    body { display: flex; align-items: center; justify-content: center; height: 100vh; background-color: #1b4d3e; color: white; font-family: Arial; }
-    .login-box { background: #f5f5f0; color: #1b4d3e; padding: 30px; border-radius: 12px; text-align: center; width: 300px; }
-    input { padding: 10px; width: 80%; margin: 10px 0; }
-    button { padding: 10px 20px; background: #1b4d3e; color: white; border: none; border-radius: 5px; cursor: pointer; }
+    body { font-family: Arial, sans-serif; margin:0; padding:20px; background:#f5f5f0; }
+    h1 { text-align:center; color:#4caf50; }
+    table { width:100%; border-collapse: collapse; margin-top:20px; }
+    th, td { border:1px solid #ccc; padding:10px; text-align:left; }
+    th { background:#4caf50; color:white; }
+    textarea { width:100%; padding:10px; margin-top:10px; border-radius:5px; border:1px solid #ccc; }
+    button { background:#4caf50; color:white; padding:8px 15px; border:none; border-radius:5px; cursor:pointer; margin-top:10px; }
   </style>
 </head>
 <body>
-  <div class="login-box">
-    <h2>Admin Login</h2>
-    <input type="password" id="password" placeholder="Enter Password">
-    <button onclick="checkPassword()">Login</button>
+
+  <h1>Green Haven Wellness Admin</h1>
+  <p style="text-align:center;">View and manage messages or add internal notes.</p>
+
+  <!-- Messages Table (example) -->
+  <table id="messages-table">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Message</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Example messages -->
+      <tr>
+        <td>1</td>
+        <td>John Doe</td>
+        <td>johndoe@gmail.com</td>
+        <td>I'd like to order Herbal Tea and Detox Syrup.</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Mary Smith</td>
+        <td>marysmith@yahoo.com</td>
+        <td>Can you provide more info on Immune Boost Capsules?</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <!-- Add internal notes -->
+  <div style="margin-top:30px;">
+    <h3>Add Internal Note</h3>
+    <textarea id="internal-note" rows="4" placeholder="Write a note..."></textarea>
+    <button onclick="addNote()">Add Note</button>
+    <ul id="notes-list" style="margin-top:10px;"></ul>
   </div>
+
   <script>
-    function checkPassword() {
-      const pass = document.getElementById('password').value;
-      if (pass === 'NATOALG7') {
-        window.location.href = 'dashboard.html';
-      } else {
-        alert('Incorrect password');
+    function addNote() {
+      let note = document.getElementById('internal-note').value;
+      if(note === '') {
+        alert("Please write a note");
+        return;
       }
+      let list = document.getElementById('notes-list');
+      let li = document.createElement('li');
+      li.textContent = note;
+      list.appendChild(li);
+      document.getElementById('internal-note').value = '';
     }
   </script>
+
 </body>
 </html>
