--- a/index.html
+++ b/index.html
@@ -5,69 +5,133 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Green Haven Wellness</title>
   <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; background: #f5f5f0; color: #333; }
-    header { background: #4caf50; color: white; padding: 20px; text-align: center; }
-    nav { background: #e0e0d1; padding: 10px; text-align: center; }
-    nav a { margin: 0 15px; color: #333; text-decoration: none; font-weight: bold; }
-    section { padding: 20px; }
-    .products, .testimonials { display: flex; flex-wrap: wrap; gap: 15px; justify-content: center; }
-    .product, .testimonial { background: white; padding: 15px; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); width: 250px; }
-    footer { background: #4caf50; color: white; text-align: center; padding: 15px; margin-top: 20px; }
-    form input, form textarea, form button { display: block; width: 100%; margin: 5px 0; padding: 10px; border-radius: 5px; border: 1px solid #ccc; }
-    form button { background: #4caf50; color: white; border: none; cursor: pointer; }
+    /* Reset and general styles */
+    * { box-sizing: border-box; margin:0; padding:0; }
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; background:#fcf9f3; color:#333; }
+    a { text-decoration:none; color:inherit; }
+    
+    /* Header */
+    header { background: #2e7d32; color: white; padding: 30px 20px; text-align: center; }
+    header h1 { font-size: 2.5rem; margin-bottom: 10px; }
+    header p { font-size: 1.1rem; }
+
+    /* Navigation */
+    nav { background: #a5d6a7; display:flex; justify-content:center; padding:15px 0; flex-wrap:wrap; }
+    nav a { margin:5px 15px; font-weight:bold; color:#1b5e20; transition:0.3s; }
+    nav a:hover { color:#ffffff; }
+
+    /* Hero Section */
+    .hero { background: url('https://images.unsplash.com/photo-1584270354949-5e53d2d03b7d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGVyYmFsfGVufDB8fDB8fA%3D%3D&w=1080&q=80') center/cover no-repeat; height: 400px; display:flex; justify-content:center; align-items:center; color:white; text-shadow:2px 2px 5px rgba(0,0,0,0.7); }
+    .hero h2 { font-size:2rem; text-align:center; }
+
+    /* Sections */
+    section { padding:40px 20px; max-width:1200px; margin:auto; }
+    h2 { text-align:center; margin-bottom:30px; color:#2e7d32; }
+
+    /* Products */
+    .products { display:flex; flex-wrap:wrap; gap:20px; justify-content:center; }
+    .product { background:white; border-radius:10px; box-shadow:0 3px 10px rgba(0,0,0,0.1); width:260px; padding:15px; transition:0.3s; }
+    .product:hover { transform:translateY(-5px); box-shadow:0 5px 15px rgba(0,0,0,0.2); }
+    .product img { width:100%; height:180px; border-radius:10px; object-fit:cover; margin-bottom:10px; }
+    .product h3 { color:#2e7d32; margin-bottom:5px; }
+    .product p { font-weight:bold; font-size:1.1rem; }
+
+    /* About */
+    #about p { max-width:700px; margin:auto; text-align:center; font-size:1.1rem; }
+
+    /* Testimonials */
+    .testimonials { display:flex; flex-wrap:wrap; gap:20px; justify-content:center; }
+    .testimonial { background:#e8f5e9; border-left:5px solid #2e7d32; padding:15px; border-radius:5px; width:300px; }
+
+    /* Order Form */
+    form { max-width:600px; margin:auto; display:flex; flex-direction:column; gap:10px; }
+    input, textarea, select, button { padding:10px; border-radius:5px; border:1px solid #ccc; font-size:1rem; }
+    button { background:#2e7d32; color:white; border:none; cursor:pointer; transition:0.3s; }
+    button:hover { background:#1b5e20; }
+
+    /* Footer */
+    footer { background:#2e7d32; color:white; text-align:center; padding:20px; margin-top:40px; }
   </style>
 </head>
 <body>
 
   <header>
     <h1>Green Haven Wellness</h1>
-    <p>Contact: <a href="mailto:greenhavenwellness1@gmail.com" style="color:white;">greenhavenwellness1@gmail.com</a></p>
-    <p>Currency: USD ($)</p>
+    <p>Email: <a href="mailto:greenhavenwellness1@gmail.com" style="color:white;">greenhavenwellness1@gmail.com</a></p>
   </header>
 
   <nav>
     <a href="#products">Featured Products</a>
-    <a href="#all-products">All Products</a>
     <a href="#about">About</a>
     <a href="#testimonials">Testimonials</a>
-    <a href="#contact">Contact</a>
+    <a href="#order">Place Order</a>
   </nav>
+
+  <div class="hero">
+    <h2>Natural Healing for a Healthier Life</h2>
+  </div>
 
   <!-- Featured Products -->
   <section id="products">
-    <h2 style="text-align:center;">8 Featured Products</h2>
+    <h2>Featured Herbal Products</h2>
     <div class="products">
-      <div class="product"><h3>Herbal Tea</h3><p>$10</p></div>
-      <div class="product"><h3>Immune Boost Capsules</h3><p>$12</p></div>
-      <div class="product"><h3>Digestive Aid Powder</h3><p>$8</p></div>
-      <div class="product"><h3>Detox Herbal Syrup</h3><p>$15</p></div>
-      <div class="product"><h3>Joint Relief Oil</h3><p>$9</p></div>
-      <div class="product"><h3>Stress Relief Capsules</h3><p>$11</p></div>
-      <div class="product"><h3>Skin Glow Serum</h3><p>$14</p></div>
-      <div class="product"><h3>Energy Boost Powder</h3><p>$13</p></div>
+      <div class="product">
+        <img src="https://via.placeholder.com/260x180?text=Herbal+Tea" alt="Herbal Tea">
+        <h3>Herbal Tea</h3>
+        <p>$300</p>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/260x180?text=Immune+Boost+Capsules" alt="Immune Boost Capsules">
+        <h3>Immune Boost Capsules</h3>
+        <p>$450</p>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/260x180?text=Digestive+Aid+Powder" alt="Digestive Aid Powder">
+        <h3>Digestive Aid Powder</h3>
+        <p>$350</p>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/260x180?text=Detox+Herbal+Syrup" alt="Detox Herbal Syrup">
+        <h3>Detox Herbal Syrup</h3>
+        <p>$500</p>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/260x180?text=Joint+Relief+Oil" alt="Joint Relief Oil">
+        <h3>Joint Relief Oil</h3>
+        <p>$400</p>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/260x180?text=Stress+Relief+Capsules" alt="Stress Relief Capsules">
+        <h3>Stress Relief Capsules</h3>
+        <p>$450</p>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/260x180?text=Skin+Glow+Serum" alt="Skin Glow Serum">
+        <h3>Skin Glow Serum</h3>
+        <p>$600</p>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/260x180?text=Energy+Boost+Powder" alt="Energy Boost Powder">
+        <h3>Energy Boost Powder</h3>
+        <p>$550</p>
+      </div>
     </div>
-  </section>
-
-  <!-- All Products -->
-  <section id="all-products">
-    <h2 style="text-align:center;">All Products (100 Herbal Items)</h2>
-    <p style="text-align:center;">Manage these easily via <strong>dashboard.html</strong>.</p>
   </section>
 
   <!-- About Section -->
   <section id="about">
-    <h2 style="text-align:center;">About Green Haven Wellness</h2>
-    <p style="max-width:700px; margin:0 auto; text-align:center;">
-      Welcome to Green Haven Wellness – your trusted source for natural herbal remedies. 
-      We provide high-quality herbal products that support healing, wellness, and overall health. 
-      Each product is carefully selected to ensure effectiveness and safety. Our mission is to bring 
-      nature’s healing power to your home, helping you live a healthier, happier life.
+    <h2>About Green Haven Wellness</h2>
+    <p>
+      Green Haven Wellness provides high-quality herbal remedies for natural healing. 
+      We specialize in treatments for various illnesses, carefully designed to support your 
+      body’s recovery and wellness. Each product is crafted with care to ensure effectiveness 
+      and safety. Trust us to bring nature’s power to your life.
     </p>
   </section>
 
   <!-- Testimonials -->
   <section id="testimonials">
-    <h2 style="text-align:center;">Testimonials</h2>
+    <h2>What Our Clients Say</h2>
     <div class="testimonials">
       <div class="testimonial">
         <p>"Amazing herbal products! I feel healthier and more energetic." – Jane D.</p>
@@ -76,22 +140,31 @@
         <p>"Fast delivery and great quality. Highly recommend Green Haven Wellness!" – Michael A.</p>
       </div>
       <div class="testimonial">
-        <p>"The best natural remedies I’ve ever used. Very satisfied!" – Sarah K.</p>
+        <p>"Effective natural remedies! Truly professional service." – Sarah K.</p>
       </div>
       <div class="testimonial">
-        <p>"Affordable and effective herbal products. Will buy again!" – Daniel O.</p>
+        <p>"Affordable and reliable herbal medicine. I will order again!" – Daniel O.</p>
       </div>
     </div>
   </section>
 
-  <!-- Contact / Order Form -->
-  <section id="contact">
-    <h2 style="text-align:center;">Contact / Place Your Order</h2>
+  <!-- Custom Order Form -->
+  <section id="order">
+    <h2>Place Your Order</h2>
     <form action="https://formspree.io/f/mayvlbrk" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="text" name="name" placeholder="Your Full Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" placeholder="Your Message / Order Details" rows="5" required></textarea>
-      <button type="submit">Send Message</button>
+      <input type="text" name="phone" placeholder="Your Phone Number" required>
+      <textarea name="order" rows="5" placeholder="Describe your order / illness or treatment needed" required></textarea>
+      <select name="treatment">
+        <option value="">Select Treatment Type</option>
+        <option value="General Wellness">General Wellness</option>
+        <option value="Detox">Detox</option>
+        <option value="Immune Boost">Immune Boost</option>
+        <option value="Stress Relief">Stress Relief</option>
+        <option value="Skin Care">Skin Care</option>
+      </select>
+      <button type="submit">Submit Order</button>
     </form>
   </section>
 
@@ -100,4 +173,4 @@
   </footer>
 
 </body>
-                                                                                      </html>
+  </html>
