--- a/admin.html
+++ b/admin.html
@@ -1,85 +1,301 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+ <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Green Haven Wellness Admin</title>
+  <title>Green Haven Wellness - Elite Admin Dashboard</title>
+  <script src="/_sdk/data_sdk.js"></script>
+  <script src="/_sdk/element_sdk.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&amp;family=Playfair+Display:wght@400;500;600;700;800;900&amp;family=Space+Grotesk:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin:0; padding:20px; background:#fcf9f3; color:#333; }
-    h1 { text-align:center; color:#2e7d32; margin-bottom:20px; }
-    .container { max-width:1200px; margin:auto; }
-    
-    table { width:100%; border-collapse: collapse; margin-bottom:30px; }
-    th, td { border:1px solid #ccc; padding:10px; text-align:left; }
-    th { background:#2e7d32; color:white; }
-    tr:nth-child(even) { background:#e8f5e9; }
+        body {
+            box-sizing: border-box;
+            font-family: 'Inter', sans-serif;
+        }
 
-    /* Notes */
-    .notes { background:white; padding:20px; border-radius:10px; box-shadow:0 3px 10px rgba(0,0,0,0.1); margin-bottom:30px; }
-    textarea { width:100%; padding:10px; border-radius:5px; border:1px solid #ccc; margin-top:10px; }
-    button { background:#2e7d32; color:white; padding:10px 15px; border:none; border-radius:5px; cursor:pointer; margin-top:10px; transition:0.3s; }
-    button:hover { background:#1b5e20; }
-    ul { list-style:none; padding-left:0; margin-top:10px; }
-    ul li { background:#f1f8e9; padding:8px; border-left:5px solid #2e7d32; margin-bottom:5px; border-radius:5px; }
-  </style>
-</head>
-<body>
+        .font-display {
+            font-family: 'Playfair Display', serif;
+        }
 
-  <h1>Green Haven Wellness Admin</h1>
-  <div class="container">
+        .font-modern {
+            font-family: 'Space Grotesk', sans-serif;
+        }
 
-    <!-- Client Messages -->
-    <h2 style="color:#2e7d32; margin-bottom:10px;">Client Messages</h2>
-    <table id="messages-table">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Name</th>
-          <th>Email</th>
-          <th>Phone</th>
-          <th>Message / Order</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- Example messages -->
-        <tr>
-          <td>1</td>
-          <td>John Doe</td>
-          <td>johndoe@gmail.com</td>
-          <td>+1234567890</td>
-          <td>I would like to order Herbal Tea and Detox Syrup for detox treatment.</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Mary Smith</td>
-          <td>marysmith@yahoo.com</td>
-          <td>+0987654321</td>
-          <td>Need Immune Boost Capsules for general wellness.</td>
-        </tr>
-      </tbody>
-    </table>
+        /* Elite Admin Gradients */
+        .gradient-admin-primary {
+            background: linear-gradient(135deg, #0f172a 0%, #1e293b 15%, #064e3b 35%, #065f46 55%, #047857 75%, #10b981 95%, #34d399 100%);
+        }
 
-    <!-- Internal Notes -->
-    <div class="notes">
-      <h2 style="color:#2e7d32; margin-bottom:10px;">Internal Notes</h2>
-      <textarea id="internal-note" rows="4" placeholder="Write an internal note..."></textarea>
-      <button onclick="addNote()">Add Note</button>
-      <ul id="notes-list"></ul>
-    </div>
+        .gradient-admin-gold {
+            background: linear-gradient(135deg, #fbbf24 0%, #f59e0b 25%, #d97706 50%, #b45309 75%, #92400e 100%);
+        }
 
-  </div>
+        .gradient-admin-emerald {
+            background: linear-gradient(135deg, #ecfdf5 0%, #d1fae5 25%, #a7f3d0 50%, #6ee7b7 75%, #34d399 100%);
+        }
 
-  <script>
-    function addNote() {
-      let note = document.getElementById('internal-note').value;
-      if(note === '') { alert("Please write a note"); return; }
-      let list = document.getElementById('notes-list');
-      let li = document.createElement('li');
-      li.textContent = note;
-      list.appendChild(li);
-      document.getElementById('internal-note').value = '';
-    }
-  </script>
+        /* Admin Glass Effects */
+        .glass-admin {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+        }
 
-</body>
-</html>
+        /* Admin Card System */
+        .card-admin {
+            background: linear-gradient(145deg, #ffffff 0%, #f8fafc 100%);
+            border-radius: 24px;
+            box-shadow: 
+                0 32px 64px -12px rgba(0, 0, 0, 0.25),
+                0 0 0 1px rgba(255, 255, 255, 0.05),
+                inset 0 1px 0 rgba(255, 255, 255, 0.1);
+            transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .card-admin::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 6px;
+            background: linear-gradient(90deg, #fbbf24, #f59e0b, #d97706, #b45309);
+            border-radius: 24px 24px 0 0;
+        }
+
+        .card-admin:hover {
+            transform: translateY(-8px) scale(1.02);
+            box-shadow: 
+                0 48px 80px -12px rgba(0, 0, 0, 0.35),
+                0 0 0 1px rgba(255, 255, 255, 0.1);
+        }
+
+        /* Admin Button System */
+        .btn-admin-primary {
+            background: linear-gradient(135deg, #047857, #059669, #10b981);
+            color: white;
+            padding: 20px 40px;
+            border-radius: 16px;
+            border: none;
+            font-weight: 700;
+            font-size: 18px;
+            cursor: pointer;
+            transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
+            position: relative;
+            overflow: hidden;
+            box-shadow: 0 12px 24px rgba(4, 120, 87, 0.3);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .btn-admin-primary:hover {
+            background: linear-gradient(135deg, #065f46, #047857, #059669);
+            transform: translateY(-4px) scale(1.05);
+            box-shadow: 0 20px 40px rgba(4, 120, 87, 0.5);
+        }
+
+        .btn-admin-danger {
+            background: linear-gradient(135deg, #ef4444, #dc2626);
+            color: white;
+            padding: 12px 24px;
+            border-radius: 12px;
+            border: none;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            font-size: 12px;
+        }
+
+        .btn-admin-danger:hover {
+            background: linear-gradient(135deg, #dc2626, #b91c1c);
+            transform: translateY(-2px);
+            box-shadow: 0 8px 20px rgba(239, 68, 68, 0.5);
+        }
+
+        .btn-admin-edit {
+            background: linear-gradient(135deg, #3b82f6, #2563eb);
+            color: white;
+            padding: 12px 24px;
+            border-radius: 12px;
+            border: none;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            font-size: 12px;
+        }
+
+        .btn-admin-edit:hover {
+            background: linear-gradient(135deg, #2563eb, #1d4ed8);
+            transform: translateY(-2px);
+            box-shadow: 0 8px 20px rgba(59, 130, 246, 0.5);
+        }
+
+        /* Admin Form Inputs */
+        .form-admin {
+            width: 100%;
+            padding: 20px 24px;
+            border: 2px solid #e2e8f0;
+            border-radius: 16px;
+            font-size: 16px;
+            transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
+            background: linear-gradient(145deg, #ffffff 0%, #f8fafc 100%);
+            box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05);
+        }
+
+        .form-admin:focus {
+            outline: none;
+            border-color: #047857;
+            box-shadow: 
+                0 0 0 4px rgba(4, 120, 87, 0.1),
+                inset 0 2px 4px rgba(0, 0, 0, 0.05);
+            transform: translateY(-2px);
+            background: #ffffff;
+        }
+
+        /* Admin Stats Cards */
+        .stats-admin {
+            background: linear-gradient(145deg, #ffffff 0%, #f8fafc 100%);
+            padding: 40px;
+            border-radius: 20px;
+            text-align: center;
+            box-shadow: 
+                0 20px 40px rgba(0, 0, 0, 0.1),
+                0 0 0 1px rgba(255, 255, 255, 0.05);
+            transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .stats-admin::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 4px;
+            background: linear-gradient(90deg, #fbbf24, #f59e0b, #d97706);
+        }
+
+        .stats-admin:hover {
+            transform: translateY(-12px) scale(1.05);
+            box-shadow: 
+                0 32px 64px rgba(0, 0, 0, 0.2),
+                0 0 0 1px rgba(255, 255, 255, 0.1);
+        }
+
+        /* Admin Product Cards */
+        .product-admin {
+            background: linear-gradient(145deg, #ffffff 0%, #f8fafc 100%);
+            padding: 32px;
+            border-radius: 16px;
+            border: 2px solid #e2e8f0;
+            transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.05);
+        }
+
+        .product-admin:hover {
+            border-color: #047857;
+            box-shadow: 0 16px 32px rgba(0, 0, 0, 0.12);
+            transform: translateY(-4px);
+        }
+
+        /* Admin Loading Spinner */
+        .loading-admin {
+            border: 4px solid #f3f4f6;
+            border-top: 4px solid #fbbf24;
+            border-right: 4px solid #f59e0b;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            animation: spinAdmin 1.2s cubic-bezier(0.23, 1, 0.32, 1) infinite;
+        }
+
+        @keyframes spinAdmin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Admin Notifications */
+        .notification-admin {
+            position: fixed;
+            top: 30px;
+            right: 30px;
+            z-index: 1000;
+            padding: 20px 32px;
+            border-radius: 16px;
+            color: white;
+            font-weight: 600;
+            box-shadow: 0 16px 32px rgba(0, 0, 0, 0.3);
+            transform: translateX(500px);
+            transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+            backdrop-filter: blur(10px);
+        }
+
+        .notification-admin.show {
+            transform: translateX(0);
+        }
+
+        .notification-admin.success {
+            background: linear-gradient(135deg, #10b981, #059669);
+        }
+
+        .notification-admin.error {
+            background: linear-gradient(135deg, #ef4444, #dc2626);
+        }
+
+        /* Admin Badge System */
+        .badge-admin-featured {
+            background: linear-gradient(135deg, #fbbf24, #f59e0b);
+            color: white;
+            padding: 8px 16px;
+            border-radius: 25px;
+            font-size: 12px;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+        .badge-admin-stock {
+            padding: 8px 16px;
+            border-radius: 25px;
+            font-size: 12px;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+        .badge-admin-stock.in-stock {
+            background: linear-gradient(135deg, #10b981, #059669);
+            color: white;
+        }
+
+        .badge-admin-stock.out-of-stock {
+            background: linear-gradient(135deg, #ef4444, #dc2626);
+            color: white;
+        }
+
+        /* Admin Rating Stars */
+        .rating-admin {
+            display: flex;
+            align-items: center;
+            gap: 4px;
+        }
+
+        .star-admin {
+            color: #fbbf24;
+            font-size: 18px;
+        }
+
+        /* Admin Price Display */
+        .price-admin {
+            font-size: 24px;
+            font-weight: 800;
+            background: linear-gradient(135deg, #
